add child componetns

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,4 +1,5 @@
 <form [formGroup]="validateForm">
+  <app-child-form-single></app-child-form-single>
   <app-child-form-personal></app-child-form-personal>
   <app-child-form-family></app-child-form-family>
 </form>
