--- a/src/app/child-form-family/child-form-family.component.html
+++ b/src/app/child-form-family/child-form-family.component.html
@@ -1,4 +1,5 @@
-<ng-container [formGroup]="controlContainer.control">
+<ng-container [formGroup]="formGroupDirective.control">
+  {{formGroupDirective.form.get('singleValue').value}}
   <ng-container formGroupName="family">
     <div><label>location:</label><input type="text" formControlName="location" /></div>
     <div><label>number:</label><input type="number" formControlName="number" /></div>
