--- a/src/app/child-form-single/child-form-single.component.html
+++ b/src/app/child-form-single/child-form-single.component.html
@@ -1,3 +1,3 @@
-<ng-container [formGroup]="controlContainer.control">
+<ng-container [formGroup]="parentForm">
   <div><label>Name:</label><input type="text" formControlName="singleValue" /></div>
 </ng-container>
